Ajustado classpath y parámetros de la JVM de scripts encr, kitchen y pan